--- a/css/output.css
+++ b/css/output.css
@@ -680,11 +680,6 @@ video {
   margin: auto;
 }
 
-.-mx-2 {
-  margin-left: -0.5rem;
-  margin-right: -0.5rem;
-}
-
 .-mx-4 {
   margin-left: -1rem;
   margin-right: -1rem;
@@ -989,24 +984,16 @@ video {
   height: 540px;
 }
 
+.h-\[90px\] {
+  height: 90px;
+}
+
 .h-full {
   height: 100%;
 }
 
 .h-lil {
   height: 2px;
-}
-
-.h-9 {
-  height: 2.25rem;
-}
-
-.h-\[90px\] {
-  height: 90px;
-}
-
-.w-1\/2 {
-  width: 50%;
 }
 
 .w-10 {
@@ -1116,10 +1103,6 @@ video {
 .w-max {
   width: -moz-max-content;
   width: max-content;
-}
-
-.w-\[12\] {
-  width: 12;
 }
 
 .min-w-\[160px\] {
@@ -1546,11 +1529,6 @@ video {
   fill: #dc2626;
 }
 
-.object-contain {
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -1685,6 +1663,62 @@ video {
 
 .font-\[Rajdhani\] {
   font-family: Rajdhani;
+}
+
+.font-\[\] {
+  font-family: ;
+}
+
+.font-\[Josefin\] {
+  font-family: Josefin;
+}
+
+.font-\[Josefin\+Sans\] {
+  font-family: Josefin+Sans;
+}
+
+.font-\[JosefinSans\] {
+  font-family: JosefinSans;
+}
+
+.font-\[Josefin-Sans\] {
+  font-family: Josefin-Sans;
+}
+
+.font-\[josefin-sans\] {
+  font-family: josefin-sans;
+}
+
+.font-\[josefin\] {
+  font-family: josefin;
+}
+
+.font-\[josefin-\] {
+  font-family: josefin-;
+}
+
+.font-\[font-\\\[Josefin-Sans\\\]\] {
+  font-family: font-\[Josefin-Sans\];
+}
+
+.font-\[rajdani\] {
+  font-family: rajdani;
+}
+
+.font-\[Oswald\] {
+  font-family: Oswald;
+}
+
+.font-\[Josefin-sans\] {
+  font-family: Josefin-sans;
+}
+
+.font-\[osefin\] {
+  font-family: osefin;
+}
+
+.font-\[josefin-sans-thin\] {
+  font-family: josefin-sans-thin;
 }
 
 .text-2xl {
@@ -1884,11 +1918,6 @@ video {
   color: rgb(185 28 28 / var(--tw-text-opacity));
 }
 
-.text-red-900 {
-  --tw-text-opacity: 1;
-  color: rgb(127 29 29 / var(--tw-text-opacity));
-}
-
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1897,6 +1926,11 @@ video {
 .text-yellow-300 {
   --tw-text-opacity: 1;
   color: rgb(253 224 71 / var(--tw-text-opacity));
+}
+
+.text-red-900 {
+  --tw-text-opacity: 1;
+  color: rgb(127 29 29 / var(--tw-text-opacity));
 }
 
 .line-through {
@@ -2056,11 +2090,6 @@ layer components {
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:border-red-400:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(248 113 113 / var(--tw-border-opacity));
 }
 
 .hover\:border-red-600:hover {
@@ -2263,10 +2292,6 @@ layer components {
     display: flex;
   }
 
-  .sm\:w-1\/4 {
-    width: 25%;
-  }
-
   .sm\:w-fit {
     width: -moz-fit-content;
     width: fit-content;
@@ -2451,24 +2476,8 @@ layer components {
     margin-top: 9rem;
   }
 
-  .lg\:h-28 {
-    height: 7rem;
-  }
-
-  .lg\:h-96 {
-    height: 24rem;
-  }
-
   .lg\:h-\[540px\] {
     height: 540px;
-  }
-
-  .lg\:h-full {
-    height: 100%;
-  }
-
-  .lg\:h-auto {
-    height: auto;
   }
 
   .lg\:w-1\/2 {
