--- a/css/output.css
+++ b/css/output.css
@@ -580,6 +580,10 @@ video {
   border-width: 0;
 }
 
+.visible {
+  visibility: visible;
+}
+
 .collapse {
   visibility: collapse;
 }
@@ -857,10 +861,6 @@ video {
   margin-left: 5rem;
 }
 
-.ml-\[7\.5rem\] {
-  margin-left: 7.5rem;
-}
-
 .mr-2 {
   margin-right: 0.5rem;
 }
@@ -947,6 +947,10 @@ video {
 
 .mt-\[11rem\] {
   margin-top: 11rem;
+}
+
+.mt-\[1px\] {
+  margin-top: 1px;
 }
 
 .mt-\[28\.5rem\] {
@@ -1187,6 +1191,10 @@ video {
   max-width: 42rem;
 }
 
+.max-w-3xl {
+  max-width: 48rem;
+}
+
 .max-w-6xl {
   max-width: 72rem;
 }
@@ -1314,6 +1322,10 @@ video {
 
 .place-content-center {
   place-content: center;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -1811,6 +1823,10 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.text-start {
+  text-align: start;
 }
 
 .font-\[Rajdhani\] {
